k8s/infra/overlays/local/docker-registry/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  template:
    spec:
      containers:
        - name: registry
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: worker
                    operator: In
                    values:
                      - "true"
