k8s/infra/overlays/local/docker-registry/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  annotations:
    external-dns.alpha.kubernetes.io/hostname: images.k8s.local
