k8s/infra/overlays/local/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect to SSL
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    # cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       -registry.k8s.local
  #     secretName: k8s-local-cert-secret # Cert-manager secret
  rules:
    - host: registry.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 80 # Forwarding to port 80
